static/style.css
/* Minimal CSS reset from alligator.io */
html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ol,
ul {
  margin: 0;
  padding: 0;
  font-weight: normal;
}

ol,
ul {
  list-style: none;
}

img {
  max-width: 100%;
  height: auto;
}

/* Styles for resume.secretfader.com */
body,
html {
  font-family: "Fira Sans", sans-serif;
  text-rendering: optimizeLegibility;
  background: #fafafa;
}

a {
  color: inherit;
  text-decoration: none;
}

h1,
h2,
h3,
h4 {
  font-family: "Fira Sans", sans-serif;
}

h1,
h2 {
  font-weight: 900;
}

h3,
h4 {
  font-weight: 400;
}

p {
  font-weight: 300;
}

div.grid {
  width: 90%;
  max-width: 960px;
  margin: 0 auto;
  display: grid;
  grid-template-columns: 2fr 1fr;
  grid-gap: 20px;
}

div.grid h2 {
  font-size: 1.7em;
  margin: 0 0 0.5em 0;
}

div.grid h2.subhead {
  text-transform: uppercase;
  font-size: 1.4em;
  margin-bottom: 1em;
  letter-spacing: 0.015em;
}

header.profile {
  grid-column: 1 / 3;
  margin: 3em 0;
}

header.profile h1 {
  font-size: 4em;
  margin-bottom: 0.5em;
}

header.profile ul {
  margin-left: auto;
  display: flex;
  font-size: 1.1em;
}

header.profile ul li {
  margin-right: 1.5em;
}

header.profile ul li a {
  text-decoration: underline;
}

header.profile ul li:last-child {
  margin-bottom: 0;
}

main {
  grid-column: 1;
}

main > ul {
  list-style-type: none;
  margin-top: 2em;
  padding: 0 0;
}

main > ul li {
  margin-bottom: 2.5em;
  position: relative;
}

main > ul li:last-child {
  margin-bottom: 0;
}

main h3 {
  font-size: 1.4em;
  margin-bottom: 0.5em;
}

main h4 {
  margin-bottom: 0.7em;
  font-weight: 400;
  font-size: 1.1em;
  color: #333;
}

aside {
  grid-column: 2;
  padding-left: 30px;
  border-left: 1px #999 solid;
}

aside > ul {
  margin: 0 0 2em 0;
  padding: 0 0;
}

aside > ul li {
  margin: 0 0 1em 15px;
}

aside > ul li::before {
  content: "\2014";
  margin-left: -15px;
  margin-right: 10px;
}

p.message {
  font-size: 1.2em;
  font-weight: 400;
  text-align: center;
  margin: 3.5em;
}

/**
 * Media Queries
 */
@media screen {
  html,
  body {
    background: #fafafa;
    font-size: 16px;
  }

  p {
    line-height: 1.7em;
    font-size: 1.1em;
  }
}

@media screen and (max-width: 800px) {
  header.profile {
    display: flex;
    flex-direction: column;
  }

  header.profile ul {
    flex-direction: column;
    width: 100%;
  }

  header.profile ul li {
    margin-bottom: 1em;
  }

  div.grid {
    grid-gap: 10px;
  }

  div.grid header.profile {
    grid-column: 3 / 3;
  }

  div.grid main {
    grid-column: 3 / 3;
  }

  div.grid aside {
    grid-column: 3 / 3;
    padding-left: 0;
    border-left: none;
    border-top: 1px solid #999;
    padding-top: 3em;
    margin-top: 3em;
  }
}

@media print {
  .screen-only {
    display: none;
  }

  html,
  body {
    font-size: 12px;
  }

  main h3 {
    font-size: 1.2em;
  }

  main > ul li {
    margin-bottom: 2em;
  }

  p {
    font-size: 1em;
    line-height: 1.3em;
  }
}

